--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "@sentry/node": "^10.40.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
