--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ SENDGRID_API_KEY=SG.your_api_key_here
 SENDGRID_FROM_EMAIL=info@digitalmongers.com
 SENDGRID_FROM_NAME=Patel Properties
 OWNER_EMAIL=info@digitalmongers.com
+
+# Mailgun Configuration (Fallback)
+MAILGUN_API_KEY=your_mailgun_api_key
+MAILGUN_DOMAIN=your_mailgun_domain
+MAILGUN_HOST=api.mailgun.net
