--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^8.2.1",
+    "form-data": "^4.0.5",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "http-status": "^2.1.0",
     "isomorphic-dompurify": "^2.36.0",
+    "mailgun.js": "^12.7.0",
     "mongoose": "^8.3.0",
     "morgan": "^1.10.1",
     "uuid": "^13.0.0",
